* небольшая доработка